--- a/src/components/Input/style.module.css
+++ b/src/components/Input/style.module.css
@@ -5,6 +5,7 @@
 
   background-color: var(--gray-500);
   color: var(--gray-100);
+  font-size: var(--font-g);
 
   padding: 0 1rem;
   border-radius: 0.5rem;
