--- a/src/components/TodoItem/style.module.css
+++ b/src/components/TodoItem/style.module.css
@@ -6,11 +6,18 @@
   justify-content: space-between;
   align-items: flex-start;
   gap: 0.75rem;
+  margin-bottom: 0.75rem;
+  min-height: 72px;
 
   border-radius: 0.5rem;
 
   font-size: var(--font-md);
   color: var(--gray-100);
+}
+
+.todo > p {
+  width: 100%;
+  text-align: left;
 }
 
 .todo > .trash {
